--- a/.github/workflows/deploy-review.yml
+++ b/.github/workflows/deploy-review.yml
@@ -5,7 +5,6 @@ on:
   workflow_call:
 
 env:
-  REGISTRY: us-docker.pkg.dev/expapp-pulumi/expapp
   IMAGE_NAME: expapp
   # REGISTRY: ghcr.io
   # IMAGE_NAME: ${{ github.repository }}
@@ -64,7 +63,8 @@ jobs:
           GCP_REGION: "us-west1"
           # GIT_BRANCH: ${{ steps.slugify.outputs.branch }}
           # GIT_SHA: ${{ steps.slugify.outputs.sha }}
-          IMAGE_URI: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.slugify.outputs.branch }}
+          IMAGE_URI: ${{ secrets.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}-${{ steps.slugify.outputs.branch }}:${{ steps.slugify.outputs.sha }}
+          SERVICE_NAME: expapp-${{ steps.slugify.outputs.branch }}
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
 
       - name: Deploy stack
@@ -79,6 +79,13 @@ jobs:
 
       - name: 'URL'
         run: 'curl "${{ steps.deploy.outputs.url }}/health"'
+
+      - name: Send URL to discord
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_URL }}
+        uses: Ilshidur/action-discord@0.3.2
+        with:
+          args: 'Branch ${{ steps.slugify.outputs.branch }} has been successfully deployed to ${{ steps.deploy.outputs.url }}'
 
       # - name: Add PR Comment with URL
       #   uses: thollander/actions-comment-pull-request@v1
