--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,8 @@ on:
     secrets:
       GAR_JSON_KEY:
         required: true
+      DOCKER_REGISTRY:
+        required: true
 
 # env:
 #   REGISTRY: ghcr.io
@@ -37,14 +39,14 @@ jobs:
       # - name: Login to Github Packages
       #   uses: docker/login-action@v1
       #   with:
-      #     registry: ${{ inputs.registry }}
+      #     registry: ${{ secrets.DOCKER_REGISTRY }}
       #     username: ${{ github.actor }}
       #     password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Login to Google Artifact Registry
         uses: docker/login-action@v2
         with:
-          registry: ${{ inputs.registry }}
+          registry: ${{ secrets.DOCKER_REGISTRY }}
           username: _json_key
           password: ${{ secrets.GAR_JSON_KEY }}
 
@@ -54,8 +56,8 @@ jobs:
           context: .
           push: true
           tags:
-            - ${{ inputs.registry }}/${{ inputs.image_name }}:${{ inputs.tag }}
-            - ${{ inputs.registry }}/${{ inputs.image_name }}:latest
+            - ${{ secrets.DOCKER_REGISTRY }}/${{ inputs.image_name }}:${{ inputs.tag }}
+            - ${{ secrets.DOCKER_REGISTRY }}/${{ inputs.image_name }}:latest
 
       # - name: Image digest
       #   run: echo ${{ steps.docker_build.outputs.digest }}
