--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -23,11 +23,11 @@ jobs:
     uses: ./.github/workflows/build.yml
     needs: build_setup
     with:
-      registry: ${{ secrets.DOCKER_REGISTRY }}
       image_name: expapp-${{ needs.build_setup.outputs.git_branch }}
       tag: ${{ needs.build_setup.outputs.git_sha }}
     secrets:
       GAR_JSON_KEY: ${{ secrets.GAR_JSON_KEY }}
+      DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
 
   # stack_exists:
   #   runs-on: ubuntu-latest
