--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,9 +3,9 @@ name: Build Action
 on:
   workflow_call:
     inputs:
-      registry:
-        required: true
-        type: string
+      # registry:
+      #   required: true
+      #   type: string
       image_name:
         required: true
         type: string
