--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -12,10 +12,9 @@ jobs:
   build_setup:
     runs-on: ubuntu-latest
     outputs:
-      git_branch: ${{ steps.slugify.outputs.branch }}
-      git_sha: ${{ steps.slugify.outputs.sha }}
+      branch: ${{ steps.slugify.outputs.branch }}
+      sha: ${{ steps.slugify.outputs.sha }}
     steps:
-      - uses: actions/checkout@v3
       - id: slugify
         uses: eltimn/slugify-action@v1.5
 
@@ -23,8 +22,8 @@ jobs:
     uses: ./.github/workflows/build.yml
     needs: build_setup
     with:
-      image_name: expapp-${{ needs.build_setup.outputs.git_branch }}
-      tag: ${{ needs.build_setup.outputs.git_sha }}
+      image_name: expapp-${{ needs.build_setup.outputs.branch }}
+      tag: ${{ needs.build_setup.outputs.sha }}
     secrets:
       GAR_JSON_KEY: ${{ secrets.GAR_JSON_KEY }}
       DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
