--- a/pulumi/Pulumi.production.yaml
+++ b/pulumi/Pulumi.production.yaml
@@ -1,5 +1,5 @@
 config:
-  gcp:project: expapp-production
+  gcp:project: expapp-pulumi
   gcp:region: us-east4
   pulumi:template: gcp-javascript
   expapp:image_uri: us-docker.pkg.dev/expapp-pulumi/expapp/expapp-main:latest
