--- a/pulumi/Pulumi.production.yaml
+++ b/pulumi/Pulumi.production.yaml
@@ -4,3 +4,4 @@ config:
   pulumi:template: gcp-javascript
   expapp:image_uri: us-docker.pkg.dev/expapp-pulumi/expapp/expapp-main:latest
   expapp:service_name: expapp-production
+  expapp:domain_main: www.eddasoftware.com
