--- a/.github/workflows/deploy-review.yml
+++ b/.github/workflows/deploy-review.yml
@@ -78,8 +78,8 @@ jobs:
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
 
-      - name: 'URL'
-        run: 'curl "${{ steps.deploy.outputs.url }}/health"'
+      # - name: 'URL'
+      #   run: 'curl "${{ steps.deploy.outputs.url }}/health"'
 
       - name: Send URL to discord
         env:
