--- a/.github/workflows/pull-request-closed.yml
+++ b/.github/workflows/pull-request-closed.yml
@@ -65,7 +65,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: destroy
     steps:
-      # - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
       - id: slugify
         uses: eltimn/slugify-action@v1.5
